--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,4 +1,23 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: likes
+#
+#  id         :bigint           not null, primary key
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  author_id  :bigint           not null
+#  post_id    :bigint           not null
+#
+# Indexes
+#
+#  index_likes_on_author_id  (author_id)
+#  index_likes_on_post_id    (post_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (author_id => users.id)
+#  fk_rails_...  (post_id => posts.id)
+#
 
 one:
   author_id: 
